--- a/appsetting.json
+++ b/appsetting.json
@@ -4,7 +4,7 @@
     "TenantId": "c1234567-d6e1-4eca-a2db-123456789012",
     "ClientId": "c1234567-0f8d-406b-ba2b-123456789012",
     "RedirectUri": "https://localhost:44368/",
-    "ClientSecret": "8~w8Q~123456789012~123456789012"
+    "ClientSecret": "8~w9Q~ZMvIwKdMCR3aBW7gunZ5~A8A6zQFnF3bHQ"
   },
   "ContactLink": "https://portal.azure.com",
   "TrainingMaterialLink": "https://portal.azure.com",
